Bug 253142 - [JSC] ResolveNode can't always skip the extra move
Summary: [JSC] ResolveNode can't always skip the extra move
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-03-01 01:45 PST by Tadeu Zagallo
Modified: 2023-03-01 11:48 PST (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tadeu Zagallo 2023-03-01 01:45:05 PST
...
Comment 1 Radar WebKit Bug Importer 2023-03-01 01:45:22 PST
<rdar://problem/106076478>
Comment 2 Tadeu Zagallo 2023-03-01 01:53:03 PST
Pull request: https://github.com/WebKit/WebKit/pull/10853
Comment 3 EWS 2023-03-01 07:23:40 PST
Committed 261006@main (e7b74be2715f): <https://commits.webkit.org/261006@main>

Reviewed commits have been landed. Closing PR #10853 and removing active labels.
Comment 4 Mark Lam 2023-03-01 11:48:33 PST
<rdar://problem/106019944>