Cherry-pick e7b74be2715f. rdar://problem/106019944

[JSC] ResolveNode can't always skip the extra move
    https://bugs.webkit.org/show_bug.cgi?id=253142
    rdar://106076478

    Reviewed by Keith Miller.

    In http://commits.webkit.org/260555@main I landed an optimization avoid the extra
    move in ResolveNode. However, that's not valid when we actually need the TDZ check.
    If the check fails, we throw an exception, but we already wrote to the destination.
    As a compromise, we still avoid the move unless we actually need the TDZ check.

    * JSTests/stress/tdz-check-catch-read.js: Added.
    (f):
    * Source/JavaScriptCore/bytecompiler/NodesCodegen.cpp:
    (JSC::ResolveNode::emitBytecode):

    Canonical link: https://commits.webkit.org/261006@main

Canonical link: https://commits.webkit.org/259548.367@safari-7615.1.26.11-branch